[package]
name = "drin-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
teloxide = { version = "0.13" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "*"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
csv = "*"
